fix: adaption for backport from 41 version [DHIS2-14971]